--- a/src/Sections/Experience/experience.css
+++ b/src/Sections/Experience/experience.css
@@ -1,13 +1,18 @@
-.exp-section {
-    max-width: 1000px;
-    color: white;
-    margin: 2rem auto;
-    padding: 20px;
-    position: relative;
-    
-    
-
+.exp-section-wrapper{
+width: 100%;
+overflow: hidden;
+padding-bottom:5rem;
 }
+
+.exp-section {
+    max-width: 850px;
+    width: 100%;
+    color: white;
+    margin:2rem auto;
+    padding: 2rem;
+    position: relative;
+}
+
 
 .triangle {
     position: absolute;
@@ -15,7 +20,7 @@
 }
 .triangle:first-child{
     top: 15%;
-    right: -10%;
+    right:-10%;
 }
 .triangle:nth-child(2){
     bottom:-10rem;
@@ -32,7 +37,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap:2rem;
+    gap:.5rem;
 }
 
 .exp-box {
@@ -86,8 +91,6 @@
     .exp-section{
         padding:0 1.5rem;
         width: 100%;
-        overflow-x: hidden;
-        overflow-y: auto;
     }
     .triangle:first-child{
         right:-80%;
@@ -100,8 +103,7 @@
         flex-direction: column;
         align-items:flex-start;
         margin-bottom: 2rem;
-    }
-    
+    }    
     .exp-box-heading{
         margin: 0 0 2px;
     }
