--- a/src/Sections/Project/Project.css
+++ b/src/Sections/Project/Project.css
@@ -70,18 +70,49 @@
 }
 
 .Project-Title{
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
+    position: relative;
     padding: 30px;
-    margin-left: 30px;
+    margin: 2rem auto;
+    max-width: 900px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .Project-Title h2{
-    font-family: 'Nunito';
     font-style: normal;
-    font-weight: 600;
-    font-size: 49px;
+    font-weight: 500;
+    font-size: 2rem;
     line-height: 67px;
     color: white;
+    width: 100%;
+}
+
+
+
+.rectangle{
+    position :absolute;
+    height: 450px;
+    z-index: -10;
+}
+.rectangle:first-child{
+    top: 8%;
+    right:-15%;
+    transform: rotate(8deg);
+}
+.rectangle:nth-child(2){
+    bottom:-2%;
+    left:-15%;
+}
+.adjust-rectangle{
+    top: 10rem;
+}
+@media screen and (max-width:600px) {
+    .rectangle:first-child{
+        right:-80%;
+        top:10%;
+    }
+    .rectangle:nth-child(2){
+        left:-50%;
+    }
+    .adjust-rectangle{
+        top: 20rem;
+    }
 }
