--- a/src/Sections/Education/Education.css
+++ b/src/Sections/Education/Education.css
@@ -1,11 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .educationcontainer {
-    width: 80%;
+    max-width: 900px;
+    width: 100%;
     margin: 2rem auto;
+    padding: 0 2rem;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+.Edtitle{
+    color: white;
+    font-family: 'Nunito',sans-serif;
+    font-weight: bold;
+    max-width: 900px;
+    width: 100%;
+    margin: 2rem auto;
+    padding: 0 2rem;
+    font-size: xx-large;
 }
 
 .logoobj {
