modified padding for footer & resized rectangles

--- a/src/Components/Footer/footercss.css
+++ b/src/Components/Footer/footercss.css
@@ -1,25 +1,26 @@
-.footerlogo{
+.footerlogo {
     width: 25%;
 }
-.footerlogo img{
+.footerlogo img {
     width: 100%;
-
 }
-.footercontainer{
+.footercontainer {
     max-width: 900px;
     width: 100%;
-    margin: 4rem auto;
+    margin: 3rem auto;
+    margin-top: 4rem;
     padding: 0 2rem;
+
     color: white;
 }
-.logoandsocials{
+.logoandsocials {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 2rem;
 }
-.socials{
+.socials {
     display: flex;
     flex-direction: row;
 }
@@ -27,38 +28,38 @@
     list-style: none;
     padding: 0;
 }
-.socialicons{
+.socialicons {
     margin: 0 1rem;
 }
-.copyrightandlinks{
+.copyrightandlinks {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
-.shortcuts{
+.shortcuts {
     display: flex;
     align-items: center;
 }
-.shortcutlinks{
-    margin:  0 0.5rem;
+.shortcutlinks {
+    margin: 0 0.5rem;
 }
 
-@media only screen and (max-width: 600px){
-    .logoandsocials{
+@media only screen and (max-width: 600px) {
+    .logoandsocials {
         flex-direction: column;
     }
-    .footerlogo{
+    .footerlogo {
         width: 70%;
         margin-bottom: 3rem;
     }
-    .copyrightandlinks{
+    .copyrightandlinks {
         flex-direction: column-reverse;
     }
-    .shortcuts{
+    .shortcuts {
         margin-bottom: 2rem;
     }
-    .footercontainer{
+    .footercontainer {
         text-align: center;
     }
 }
