--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -68,8 +68,8 @@ a {
     margin: 1rem 0;
     display: inline-block;
     border-radius: 20px;
-    padding: 0.3rem 0.6rem;
-    background: rgba(85, 84, 84, 0.55);
+    padding: 0.3rem 1rem;
+    background: rgb(46 46 46 / 55%);
 }
 .header-intro-desc {
     max-width: 400px;
@@ -82,13 +82,10 @@ a {
 
 .header-intro-resume {
     display: inline-block;
-    padding: 0.2rem 0.5rem;
-    font-size: 0.9rem;
-    border-radius: 15px;
+    padding: 0.3rem 1rem;
+    font-size: 1.2rem;
+    border-radius: 50px;
     border: 2px solid white;
-    -webkit-box-shadow: -2px 1px 6px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: -9px 10px 5px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: -3px 3px 6px 0px rgba(0, 0, 0, 0.217);
     transition: all 150ms ease-in;
 }
 .header-intro-resume:hover {
