--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -1,88 +1,84 @@
-@import url('https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
-nav{
+nav {
     width: 100%;
     background: rgb(19, 19, 19);
-    color:#fff;
+    color: #fff;
     height: 70px;
     position: fixed;
     z-index: 100;
-    top:0;
-
+    top: 0;
 }
 
-.nav-container{
+.nav-container {
     position: relative;
     margin: 0 auto;
     max-width: 900px;
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 100%;
-    padding:2rem;
-    z-index:100;
+    padding: 2rem;
+    z-index: 100;
 }
-.nav-brand{
-    font-size:1.6rem;
-    font-family: 'Philosopher',sans-serif;
+.nav-brand {
+    font-size: 1.6rem;
 }
 
-.nav-items{
+.nav-items {
     display: flex;
-    gap:2rem;
+    gap: 2rem;
     justify-content: center;
     align-items: center;
 }
-.nav-link{
-    display:inline-block;
+.nav-link {
+    display: inline-block;
     transition: all 150ms ease-in;
     position: relative;
 }
 
-.nav-link::after{
-    content:"";
+.nav-link::after {
+    content: '';
     position: absolute;
     width: 0%;
     background-color: #fff;
-    height:2px;
-    bottom:-2px;
-    left:0;
+    height: 2px;
+    bottom: -2px;
+    left: 0;
     transition: all 150ms ease-in-out;
 }
 
-.nav-link:hover::after{
+.nav-link:hover::after {
     width: 100%;
 }
-.menu-container{
+.menu-container {
     display: none;
 }
-.menu{
+.menu {
     height: 15px;
-    cursor:pointer;
+    cursor: pointer;
 }
 
-.hidden{
+.hidden {
     display: none;
 }
 
-@media screen and (max-width:600px){
+@media screen and (max-width: 600px) {
     .menu-container {
         display: block;
     }
 
-    .nav-items{
-        z-index:-1;
+    .nav-items {
+        z-index: -1;
         position: absolute;
         flex-direction: column;
         background-color: rgb(19, 19, 19);
         width: 100%;
-        top:-1000%;
-        transition:all 400ms ease-out;
-        left:0;
-        padding:2rem;       
+        top: -1000%;
+        transition: all 400ms ease-out;
+        left: 0;
+        padding: 2rem;
     }
-    .showmenu{
-        top:60px;
+    .showmenu {
+        top: 60px;
     }
 }
