--- a/src/Sections/Project/Project.css
+++ b/src/Sections/Project/Project.css
@@ -10,15 +10,15 @@
     justify-content: center;
 }
 .card {
-    background: rgba(255, 255, 255, 0.11);
+    background: rgba(255, 255, 255, 0.21);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(15.5px);
     -webkit-backdrop-filter: blur(15.5px);
     border: 1px solid rgba(255, 255, 255, 0.77);
     margin: 30px;
-    max-width: 300px;
-    max-height: 850px;
-    min-height: 400px;
+    max-width: 285px;
+    max-height: 750px;
+    min-height: 360px;
     min-width: 180px;
     display: flex;
     flex-direction: column;
@@ -38,22 +38,14 @@
 }
 
 .desc {
-    background: none;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 16px;
-    line-height: 16px;
-    display: flex;
-    align-items: center;
-    padding: 8px;
-    text-align: center;
+    margin: 20px 20px;
     color: #ffffff;
     /* margin-bottom: 10px; */
 }
 
 .image-icon {
     background: none;
-    padding: 3em 0;
+    padding: 2em 0;
     display: flex;
     justify-content: center;
 }
@@ -65,7 +57,10 @@
     /* box-shadow:  0 0.3em 1.2em ; */
     object-fit: cover;
 }
-
+.project-wrapper {
+    width: 100%;
+    overflow: hidden;
+}
 .Project-Title {
     position: relative;
     padding: 30px;
