--- a/src/Components/Experience/experience.css
+++ b/src/Components/Experience/experience.css
@@ -15,6 +15,7 @@ padding-bottom:5rem;
 
 
 .triangle {
+    z-index:-100;
     position: absolute;
     height: 350px;
 }
@@ -52,6 +53,8 @@ padding-bottom:5rem;
     background: rgb(255, 255, 255);
     background: linear-gradient(90deg, rgba(255, 255, 255, 0.363) 0%, rgba(255, 255, 255, 0.363) 35%, rgba(108, 105, 105, 0.363) 100%);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter:blur(10px);
+    -moz-backdrop-filter:blur(10px);
     box-shadow: #000;
     box-shadow: -2px 9px 15px 0px rgba(0, 0, 0, 0.68);
     -webkit-box-shadow: -2px 9px 15px 0px rgba(0, 0, 0, 0.68);
@@ -68,12 +71,13 @@ padding-bottom:5rem;
 
 .exp-box-heading {
     font-size: 1.6rem;
-    margin: 0 0 1rem;
+    margin: 0 0 0rem;
     font-weight: 300;
 }
 
 .heading {
     font-weight: 500;
+    margin:0;
 }
 
 .heading-company-name{
@@ -81,7 +85,7 @@ padding-bottom:5rem;
 }
 
 .exp-heading-date {
-    font-size:1.1rem;
+    font-size:1rem;
     font-weight:300;
 }
 
@@ -98,7 +102,7 @@ padding-bottom:5rem;
 /* ============================== RESPONSIVE =========================== */
 @media screen and (max-width:600px) {
     .exp-section{
-        padding:0 2rem;
+        padding:0 1.5rem;
         width: 100%;
     }
     .triangle:first-child{
@@ -119,6 +123,13 @@ padding-bottom:5rem;
     .exp-box-desc{
         padding:0;
         font-weight: 300;
+    }
+    .exp-heading-date{
+        font-size:0.5rem;
+    }
+    .heading-company-name{
+        display:block;
+        margin-left:-10px;
     }
     
 }
