--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -1,6 +1,7 @@
 nav {
     width: 100%;
-    background: rgb(19, 19, 19);
+    background: rgb(19, 19, 21,.6);
+    backdrop-filter: blur(20px);
     color: #fff;
     height: 70px;
     position: fixed;
@@ -17,7 +18,7 @@ nav {
     align-items: center;
     width: 100%;
     height: 100%;
-    padding: 2rem;
+    padding: 0rem 2rem;
     z-index: 100;
 }
 .nav-brand {
