--- a/src/Components/Skills/skills.css
+++ b/src/Components/Skills/skills.css
@@ -9,7 +9,10 @@ background-size:cover;}
 
      
   }
- 
+  .parentContainer{
+    
+  }
+
 
   .imagecontainer{
     display: flex;
@@ -96,7 +99,6 @@ background-image: linear-gradient(135deg, rgba(255, 255, 255, 0.25), rgba(255, 2
   background-image: inherit;
   transform: rotate(-45deg);
   
-  
 }
 
 .box2 {
@@ -115,7 +117,6 @@ background-image: linear-gradient(135deg, rgba(255, 255, 255, 0.25), rgba(255, 2
   align-items: center;
   justify-content: center;
   transform: rotate(45deg);
-  
  
 }
 
