--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -68,8 +68,10 @@ a {
     margin: 1rem 0;
     display: inline-block;
     border-radius: 20px;
+    border:none;
+    outline:none;
     padding: 0.3rem 1rem;
-    background: rgb(46 46 46 / 55%);
+    background: rgb(256 256 256 / 25%);
 }
 .header-intro-desc {
     max-width: 400px;
